Final version of the IS Catalog ETL metadata viewer along with full linking for it and IS Snippets grouping

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -135,9 +135,15 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
 
 ## Interaction Studio
 
-Interaction Studio is a cross-channel real-time hyper-personalisation engine in Salesforce Marketing Cloud. Behind that cool-looking description is a powerful tool that lets your company adapt every point of contact to each person. Neat!
+Interaction Studio (Salesforce Marketing Cloud Personalization) is a cross-channel real-time hyper-personalisation engine in Salesforce Marketing Cloud. Behind that cool-looking description is a powerful tool that lets your company adapt every point of contact to each person. Neat!
+
+### Interaction Studio Documentation
 
 - [Open Time Email Template](./interaction-studio/is-open-time-email.mdx)
+
+### Interaction Studio Snippets
+
+- [Catalog ETL Metadata Viewer](./interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx)
 
 <Button
     link='./category/interaction-studio/'
