--- a/docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx
+++ b/docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx
@@ -11,37 +11,37 @@ import { Button } from '../../../src/components/Buttons.js';
 
 <LeadText content="Debug your Interaction Studio (SFMC Personalization) Catalog Object Item attributes with the power of Serverside Code." />
 
-## Problem with Catalog Object ETL Metadata
+## Problem with debugging Catalog data
 
-Interaction Studio (MCP) can pull product, content and related catalog data from multiple sources and does it on ongoing basis. That's perfect when all works great, but once you see some discrepancy in the data, debugging features are very limited. Sure,
+Interaction Studio (MCP) can pull product, content and related catalog data from multiple sources and does it continuously. That's perfect when all works great, but debugging features are minimal once you see some data discrepancies.
 
-SFTP stores processed CSV Feed files, but finding the culprit is not easy. Especially if you push frequently with delta files.
+Sure, SFTP stores processed CSV Feed files, but finding the culprit takes work, especially if you push frequently with delta files.
 
-Knowing which exact ETL load introduced problematic data is huge help to find the root cause of the issue and rectify the data pipeline. While it is not available out-of-the-box, we can build a custom for it.
+Knowing which exact ETL load introduced problematic attribute values is a tremendous help in finding the root cause of the issue and rectifying the data pipeline. While it is not available out of the box, we can build a custom for it.
 
 ## Solution
 
-Inspired by the awesome User Metadata Serverside template created by [Christopher Long](https://www.linkedin.com/in/christopherlong/) available [here](https://github.com/christopher-longSFDC/mcp/wiki/Serverside-Templates) I decided to create something similar forthe Catalog Object data.
+Inspired by the excellent User Metadata Serverside template created by [Christopher Long](https://www.linkedin.com/in/christopherlong/) available [here](https://github.com/christopher-longSFDC/mcp/wiki/Serverside-Templates) I decided to create something similar for the Catalog Object data.
 
-A Serverside Template that leverages built-in Simulated Payload Preview available in Template Editor to display hidden changelog for ETL updates.
+A Serverside Template that leverages built-in Simulated Payload Preview available in Template Editor to display hidden changelog for ETL updates: attribute's current value, timeframe it was first introduced and first CSV that provided it to IS.
 
-This approach leverages native features of the platform to access unsurfaced data in a techy, but easily transferable format.
+This approach leverages native features of the platform to access unsurfaced data in a techy but easily transferable format.
 
-Additionally it's a great way to showcase some IS Serverside Code approaches that can be useful for building standard campaign templates.
+Additionally, it's a great way to showcase some IS Serverside Code approaches that can be useful for building standard campaign templates.
 
 ### Implementation Guide
 
-Implementation is straightforward and you can have the solution working within a minute.
+Implementation is straightforward, and you can have a working solution within a minute.
 
 1. Go to SFMC » Personalization
-2. On left pane hover over Server-Side and click on Server-Side and Triggered Templates
+2. On the left pane, hover over Server-Side and click on Server-Side and Triggered Templates
 3. Click New Template
 4. Provide a meaningful name (for example: "Catalog ETL Metadata Viewer")
-5. Copy-paste code available below
+5. Copy-paste the code available below
 6. Save
 7. Use :)
 
-You don't need to Publish a template to leverage the Simulated Payload Preview. Keeping it unpublished will guarante noone will try to use it for a Campaign.
+You don't need to Publish a template to leverage the Simulated Payload Preview. Keeping it unpublished guarantees no one will use it for a live Campaign.
 
 ### Serverside Code
 
@@ -123,36 +123,37 @@ Optionally, you can modify the scope of returned data in the left Configuration 
 
 ## Limitations
 
-While this solution can be really helpful for Interaction Studio Catalog Object debugging, there are few important limitations to consider.
+While this solution can benefit Interaction Studio Catalog Object debugging, there are a few significant limitations.
 
 ### Data scope
 
-Unfortunately, at the moment the platform surfaces metadata only for Catalog Items updated using ETL. Any other source (Manual update, Web or Mobile SDK) provides only current value, but no information about the last change or the exact source (apart from it not being an ETL).
+Unfortunately, at the moment, the platform surfaces metadata only for Catalog Items updated using ETL. Any other source (Manual update, Web or Mobile SDK) provides only current value but no information about the last change or the exact Source (apart from it not being an ETL).
 
-Additionally, the metadata returned for the ETL uploads provides only file name and timestamp that first introduced the current value. There is no option to check what was the previous value.
+Additionally, the metadata returned for the ETL uploads provides only the file name and timestamp that first introduced the current value. There is no option to check what was the previous value.
 
-This is still very helpful to find understand whether the attribute has been overwritten using wrong ETL and which CSVs should be checked for confirming the pipeline issues.
+It is still very helpful to understand whether the Interaction Studio overwrote the attribute using incorrect ETL data and which CSVs you should check to confirm the pipeline issues.
 
 ### Data quality
 
-Another huge caveat with the metadata is that Manual changes through the Catalog UI are creating a lot of issues by silently changing attribute values and/or metadata. Example behaviours:
+Another huge caveat with the metadata is that Manual changes through the Catalog UI create many issues by silently changing attribute values and/or metadata. Example behaviours:
 
-1. Manual changes to field value retain metadata information of the previous value source (so both `ETL` and `SDK` Source can actually be introduced via a change in UI).
-2. `price`, `listPrice`, `margin`, `published`, `expiration` are being changed from `ETL` to `SDK` Source even when manual changes weren't touching those attributes.
-3. if `expiration` was `NULL`, it gets set to a timestamp 100 yaers in the future
+1. Manual changes to field value retain metadata information of the previous value source (so values marked as coming from both `ETL` and `SDK` Sources could be introduced via UI).
+2. `price`, `listPrice`, `margin`, `published`, and `expiration` are being changed from `ETL` to `SDK` Source even when manual changes weren't touching those attributes.
+3. if `expiration` was `NULL`, it gets set to timestamp 100 years in the future
 4. if `margin` was `NULL`, it gets set to 0
 
-This is awful, but hopefully there aren't a lot of manual changes happening in the production dataset and this issue will be minimal. Still, it's worth keeping this in mind when the metadata preview doesn't make sense.
+It is awful, but hopefully, only a few manual changes are happening in the production dataset, and this issue will be minimal. Still, it's worth remembering this when the metadata preview doesn't match data in the CSV.
 
 ### Context.event.fields.item
 
-While `context.event.fields.item` is perfect for use case described here, don't try to use it in standard Campaigns. Unfortunately it is filled in only in the Similation Preview and will not be available when deployed to a website. This is huge limitation with one dirty workaround.
+While `context.event.fields.item` is perfect for the use case described here, don't try to use it in standard Campaigns. Unfortunately, it is filled in only in the Simulation Preview and will not be available when deployed to a website. It is a massive limitation with one dirty workaround.
 
-To get a similar outcome in a real campaign you have to:
-1. Create a string User Attribute to store last viewed product ID.
-2. In the Sitemap extend the Product View Page Type `onActionEvent` with push of current product ID to the attribute created in the previous step.
+To get a similar outcome in an actual campaign, you have to:
+
+1. Create a string User Attribute to store the last viewed product ID.
+2. In the Sitemap, extend the Product View Page Type `onActionEvent` to push the current product ID to the attribute created in the previous step.
 3. Leverage `context?.user?.attributes?.nameOfYourNewAttribute` to get the ID and leverage it for .findItem and other purposes.
 
 ## Options
 
-The current version of the solution was created with easy-to-use, strightforward interface leveraging out-of-the-box features of the platform. However, you can extend the code with additional field accepting a list of IDs to return payloads for multiple items in a single run to facilitate faster debugging.
+I created the current version of the solution with an easy-to-use, straightforward interface leveraging out-of-the-box features of the platform. However, you can extend the code with an additional field accepting a list of IDs to return payloads for multiple items in a single run to facilitate faster debugging.
