Small content fixes to clear up the message

--- a/docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx
+++ b/docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx
@@ -17,7 +17,10 @@ Interaction Studio (MCP) can pull product, content and related catalog data from
 
 Sure, SFTP stores processed CSV Feed files, but finding the culprit takes work, especially if you push frequently with delta files.
 
-Knowing which exact ETL load introduced problematic attribute values is a tremendous help in finding the root cause of the issue and rectifying the data pipeline. While it is available only for custom attributes (hover over the value to see it), we can build a more powerful custom for it.
+Knowing which exact ETL load introduced problematic attribute values is a tremendous help in finding the root cause of the issue and rectifying the data pipeline. While it is available only for custom attributes (hover over the value to see it), we can:
+
+1. [Vote for IdeaExchange](https://ideas.salesforce.com/s/idea/a0B8W00000NWbmJUAT/full-is-mcp-catalog-metadata-visibility) to make it perfect out-of-the-box.
+2. Build a more powerful custom solution for it in the meantime.
 
 ## Solution
 
@@ -30,13 +33,13 @@ A Serverside Template that leverages built-in Simulated Payload Preview availabl
     "attributes": {
         "archived": {
             "value": false,
-            "lastChangeSource": "ETL",
-            "lastChangeFile": "product-2022-12-05_08-19-35.csv",
-            "lastChangeDate": "Dec 05 2022 07:25:30"
+            "addedBySource": "ETL",
+            "addedByFile": "product-2022-12-05_08-19-35.csv",
+            "addedDate": "Dec 05 2022 07:25:30"
         },
         "brand":{
             "value":"Apple",
-            "lastChangeSource":"SDK"
+            "addedBySource":"Not ETL"
         }
     }
 }
@@ -80,13 +83,13 @@ Optionally, you can modify the scope of returned data in the left Configuration 
 `)
 
     @title('Item attribute metadata to display:')
-    @subtitle('File and Updated Date are available only for the ETL Source.')
-    showItemAttributeDetails: ('Value'|'Source'|'File'|'Updated Date'|'Locale')[] = ['Value', 'Source', 'File', 'Updated Date'];
+    @subtitle('File and Change Date are available only for the ETL Source.')
+    showItemAttributeDetails: ('Value'|'Source'|'File'|'Change Date'|'Locale')[] = ['Value', 'Source', 'File', 'Change Date'];
 
     @markdown(`Platform displays partially incorrect data when you manually Save Item in the Catalog, learn more [here](https://mateuszdabrowski.pl/docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer/).`)
 
     @title('Item non-attribute values to display:')
-    @subtitle('Only values are available - no Source/File/Updated Date/Locale data is exposed by the platform.')
+    @subtitle('Only values are available - no Source/File/Change Date/Locale data is exposed by the platform.')
     showItemContextDetails: ('ID'|'Location'|'Related Catalog Objects'|'Categories'|'SKUs')[];
 
     run(context: CampaignComponentContext) {
@@ -119,9 +122,9 @@ Optionally, you can modify the scope of returned data in the left Configuration 
 
                 if (config.itemAttributes?.includes('Value')) processedAttributes['value'] = attributeData.value;
                 if (Number.isInteger(attributeData.value) && attributeData.value > 10e10) processedAttributes['readableValue'] = makeEpochReadableAgain(attributeData.value);
-                if (config.itemAttributes?.includes('Source')) processedAttributes['lastChangeSource'] = attributeData.metadata?.origin || 'SDK';
-                if (config.itemAttributes?.includes('File') && attributeData.metadata?.origin === 'ETL' ) processedAttributes['lastChangeFile'] = attributeData.metadata?.provider.substring(16);
-                if (config.itemAttributes?.includes('Updated Date') && attributeData.metadata?.origin === 'ETL' ) processedAttributes['lastChangeDate'] = makeEpochReadableAgain(attributeData.metadata?.lastUpdated);
+                if (config.itemAttributes?.includes('Source')) processedAttributes['addedBySource'] = attributeData.metadata?.origin || 'Not ETL';
+                if (config.itemAttributes?.includes('File') && attributeData.metadata?.origin === 'ETL' ) processedAttributes['addedByFile'] = attributeData.metadata?.provider.substring(16);
+                if (config.itemAttributes?.includes('Change Date') && attributeData.metadata?.origin === 'ETL' ) processedAttributes['addedDate'] = makeEpochReadableAgain(attributeData.metadata?.lastUpdated);
                 if (config.itemAttributes?.includes('Locale')) processedAttributes['locale'] = attributeData.locale;
 
                 attributes[attribute] = processedAttributes;
@@ -154,8 +157,8 @@ It is still very helpful to understand whether the Interaction Studio overwrote 
 
 Another huge caveat with the metadata is that Manual changes through the Catalog UI create many issues by silently changing attribute values and/or metadata. Example behaviours:
 
-1. Manual changes to field value retain metadata information of the previous value source (so values marked as coming from both `ETL` and `SDK` Sources could be introduced via UI).
-2. `price`, `listPrice`, `margin`, `published`, and `expiration` are being changed from `ETL` to `SDK` Source even when manual changes weren't touching those attributes.
+1. Manual changes to field value retain metadata information of the previous value source (so values marked as coming from both `ETL` and `Not ETL` Sources could be introduced via UI).
+2. `price`, `listPrice`, `margin`, `published`, and `expiration` are being changed from `ETL` to `Not ETL` Source even when manual changes weren't touching those attributes.
 3. if `expiration` was `NULL`, it gets set to timestamp 100 years in the future
 4. if `margin` was `NULL`, it gets set to 0
 
