Links fixes plus update on Multi-Org Config limitation

--- a/docs/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/webinars/sfmc-webinar-account-architecture.mdx
@@ -14,16 +14,18 @@ import { YouTube } from '../../src/components/VideoEmbed.js';
 
 ## Table of Contents
 
-1. SFMC Business Units ([5:53](https://youtu.be/3ngC9OLKaEI?t=353))
-2. Business Units Setup Patterns ([21:02](https://youtu.be/3ngC9OLKaEI?t=1262))
-3. Single-Org vs Multi-Org ([27:31](https://youtu.be/3ngC9OLKaEI?t=1651))
-4. Marketing Cloud Connect Patterns ([41:36](https://youtu.be/3ngC9OLKaEI?t=2496))
-5. SAP, Private Domains & IPs ([50:21](https://youtu.be/3ngC9OLKaEI?t=3021))
-6. Deliverability & IP Warmup ([56:22](https://youtu.be/3ngC9OLKaEI?t=3382))
+1. SFMC Business Units ([5:53](https://youtu.be/dRxcbwIA1K0?t=353))
+2. Business Units Setup Patterns ([21:02](https://youtu.be/dRxcbwIA1K0?t=1262))
+3. Single-Org vs Multi-Org ([27:31](https://youtu.be/dRxcbwIA1K0?t=1651))
+4. Marketing Cloud Connect Patterns ([41:36](https://youtu.be/dRxcbwIA1K0?t=2496))
+5. SAP, Private Domains & IPs ([50:21](https://youtu.be/dRxcbwIA1K0?t=3021))
+6. Deliverability & IP Warmup ([56:22](https://youtu.be/dRxcbwIA1K0?t=3382))
 
 ## Video
 
 <YouTube videoId="dRxcbwIA1K0" title="SFMC Account Architecture Webinar Recording" />
+
+Update related to the [Shared DE configuration](https://youtu.be/dRxcbwIA1K0?t=2037) and [Synchronized DEs visibility](https://youtu.be/dRxcbwIA1K0) limitations: you can partially control the visibility over Objects / Records in a Multi-Org configuration by synchronizing the same SFMC Connector User to multiple SF Connector Users with different permision sets: [SF Knowledge Article](https://help.salesforce.com/s/articleView?id=000381081&type=1).
 
 ## Materials
 
