Updated draft for IS Catalog Objects Architecture

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -139,6 +139,7 @@ Interaction Studio (Salesforce Marketing Cloud Personalization) is a cross-chann
 
 ### Interaction Studio Documentation
 
+- [Catalog Objects Architeture](./interaction-studio/is-catalog-objects-architecture.mdx)
 - [Open Time Email Template](./interaction-studio/is-open-time-email.mdx)
 
 ### Interaction Studio Snippets
