--- a/docs/interaction-studio/is-catalog-architecture.mdx
+++ b/docs/interaction-studio/is-catalog-architecture.mdx
@@ -2,18 +2,31 @@
 id: is-catalog-objects-architecture
 title: IS Catalog Objects Architecture
 sidebar_label: Catalog Objects Architecture
-description:
+description: Interaction Studio (MC Personalization) Catalog architecture, limitations, tricks and tips. Build right from the start.
 image: img/og/og-image-interaction-studio-catalog-objects-architecture.png
+tags: [Interaction Studio, Personalisation, Setup, Data Management]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
-import { Button } from '../../src/components/Buttons.js';
 
-<LeadText content="" />
+<LeadText content="Interaction Studio (SFMC Personalization) Catalog architecture, limitations, tricks and tips. Build right from the start." />
 
-## Interaction Studio Catalog Basics
+## Catalog Basics & Limitations
+
+The purpose of the Interaction Studio Catalog is to store your data along with relationships for the personalisation and machine learning purposes.
+
+There are five out-of-the-box objects: Products, Articles, Blog Posts, Categories and Promotions. You can also create up to 25 custom Catalog Objects.
+
+Each of those Objects contain some built-in attributes (like Name, URL, Description, Promotable) and can be extended with custom attributes to a total of 35 attributes on an Object.
+
+All of the above can be interconnected using prebuilt and custom relationships between Objects (for example, built-in relationship between Product and a Category).
 
 ## Catalog Recipe Considerations
 
 ## Catalog Personalization Considerations
 
+## Catalog Tips & Tricks
+
+### Export full IS Catalog data
+
+### View archived Products in the IS Catalog
