Updates to Tags and alternative product name for IS pages

--- a/docs/interaction-studio/is-open-time-email.mdx
+++ b/docs/interaction-studio/is-open-time-email.mdx
@@ -13,7 +13,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 ## What is Open Time Email Campaign
 
-In short, Open Time Email Campaign in Interaction Studio (MCP) is a solution for providing __always up-to-date__, personalised recommendations to your customers.
+In short, Open Time Email Campaign in Interaction Studio (SFMC Personalization) is a solution for providing __always up-to-date__, personalised recommendations to your customers.
 
 The general rule of email communication is that the moment you send the email, you lose control and cannot make any changes (just like with paper mail). There are, however, two exceptions:
 
