--- a/docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx
+++ b/docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx
@@ -4,6 +4,7 @@ title: IS Catalog ETL Metadata Viewer
 sidebar_label: Catalog ETL Metadata Viewer
 description: Debug your Interaction Studio (SFMC Personalization) Catalog Object Item attributes with the power of Serverside Code.
 image: img/og/og-image-interaction-studio-catalog-etl-metadata-viewer.png
+tags: [Interaction Studio, Personalisation, Data Management]
 ---
 
 import { LeadText } from '../../../src/components/LeadText.js';
