--- a/sites/ideas/interaction-studio-ideas.mdx
+++ b/sites/ideas/interaction-studio-ideas.mdx
@@ -184,7 +184,7 @@ Unsubscribe should be added to unlock a wide range of targeted campaigns like su
 
 ## Reporting
 
-### Direct Attribution on IS Campaign level
+### Direct Attribution on IS / MCP Campaign level
 
 Interaction Studio (Personalization) offers a wide selection of Reports based on Activity, Results and Visits. It lacks, however, clear and detailed reporting on direct attribution from specific campaigns.
 
