--- a/docs/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/webinars/sfmc-webinar-account-architecture.mdx
@@ -25,7 +25,21 @@ import { YouTube } from '../../src/components/VideoEmbed.js';
 
 <YouTube videoId="dRxcbwIA1K0" title="SFMC Account Architecture Webinar Recording" />
 
-Update related to the [Shared DE configuration](https://youtu.be/dRxcbwIA1K0?t=2037) and [Synchronized DEs visibility](https://youtu.be/dRxcbwIA1K0) limitations: you can partially control the visibility over Objects / Records in a Multi-Org configuration by synchronizing the same SFMC Connector User to multiple SF Connector Users with different permision sets: [SF Knowledge Article](https://help.salesforce.com/s/articleView?id=000381081&type=1).
+<br/>
+
+:::note You Should Know
+
+### Important errata related to the Multi-Org limitations
+
+While one SF Org can have only one integration to a single Marketing Cloud Account, you can leverage [more than one Integration User on the Salesforce side](https://help.salesforce.com/s/articleView?id=000381081&type=1) for that connection. Doing so provides a few significant benefits:
+
+1. The [recommended limit of up to 5 Business Units per integration in Multi-Org](https://youtu.be/dRxcbwIA1K0?t=2639) is applied to the SF Integration User, not Marketing Cloud Connect itself. It enables you to use multiple SF Integration Users in a single SF Org to connect dozens of Business Units (up to 5 per User).
+2. The [shared Synchronized Objects configuration per SF Org](https://youtu.be/dRxcbwIA1K0?t=2037) is applied to SF Integration User. It enables you to set distinct configurations per each SF Integration User (shared across Business Units connected using the same User).
+3. While you still cannot control the [Synchronized DEs visibility](https://youtu.be/dRxcbwIA1K0?t=2173) of SFMC Users, you can control which Objects and Records are being synchronized to each Business Unit by applying appropriate Permissions to each SF Integration User. It enables use cases like syncing different Contact Record Types to each Business Unit.
+
+Using the above approach requires additional User licences on the SF CRM side and adds complexity to your implementation. However, it can significantly expand possible use cases in Multi-Org configurations.
+
+:::
 
 ## Materials
 
